base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freqtrade
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: default
    sectionName: websecure
  hostnames:
  - freqtrade.example.com
  rules:
  - matches:
    - path:
        value: /
    backendRefs:
    - name: freqtrade
      port: 8080
